--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.9.0"
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
@@ -16,7 +16,7 @@ buildscript {
 
 plugins {
     // other plugins...
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 allprojects {
